--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portofolio</title>
-</head>
-<body>
-    
-</body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
+
+  <body>
+    <header class="header-head">
+      <nav class="nav-menu">
+        <div class="container">
+          <div class="logo"></div>
+          <a href="javascript:;" class="nav-bar" id="hamBurger"
+            ><i class="fa fa-bars"></i
+          ></a>
+          <div class="nav-list">
+            <ul>
+              <li class="list-item"><a href="#" class="nav-link">Home</a></li>
+              <li class="list-item"><a href="#" class="nav-link">About</a></li>
+              <li class="list-item"><a href="#" class="nav-link">Sertificat</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      <main class="page">
+        
+
+      </main>
+    </header>
+  </body>
 </html>
