--- a/index.html
+++ b/index.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portofolio</title>
+    <link rel="stylesheet" href="assets/Css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-  </head>
+        href="https://fonts.googleapis.com/css2?family=Alike+Angular&family=Geist+Mono:wght@100..900&family=Nerko+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+</head>
 
-  <body>
+<body>
     <header class="header-head">
-      <nav class="nav-menu">
-        <div class="container">
-          <div class="logo"></div>
-          <a href="javascript:;" class="nav-bar" id="hamBurger"
-            ><i class="fa fa-bars"></i
-          ></a>
-          <div class="nav-list">
-            <ul>
-              <li class="list-item"><a href="#" class="nav-link">Home</a></li>
-              <li class="list-item"><a href="#" class="nav-link">About</a></li>
-              <li class="list-item"><a href="#" class="nav-link">Sertificat</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+        <nav class="nav-menu">
+            <div class="container">
+                <div class="logo">
+                    <img src="assets/Img/haha.jpg" alt="Logo">
+                </div>
+                <a href="javascript:;" class="nav-bar" id="hamBurger"><i class="fa fa-bars"></i></a>
+                <div class="nav-list">
+                    <ul class="nav-item" id="navItem">
+                        <li class="list-item active"><a href="#" class="nav-link">Home</a></li>
+                        <li class="list-item"><a href="#" class="nav-link">About</a></li>
+                        <li class="list-item"><a href="#" class="nav-link">Sertificat</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
-      <main class="page">
-        
+        <main class="page">
 
-      </main>
+
+        </main>
     </header>
-  </body>
+</body>
+
 </html>
