--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portofolio</title>
+    <link rel="shortcut icon" href="assets/Img/Tab Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/Css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,24 +20,26 @@
         <nav class="nav-menu">
             <div class="container">
                 <div class="logo">
-                    <img src="assets/Img/haha.jpg" alt="Logo">
+                    <img src="assets/Img/Satria.png" alt="Logo">
                 </div>
                 <a href="javascript:;" class="nav-bar" id="hamBurger"><i class="fa fa-bars"></i></a>
-                <div class="nav-list">
-                    <ul class="nav-item" id="navItem">
-                        <li class="list-item active"><a href="#" class="nav-link">Home</a></li>
-                        <li class="list-item"><a href="#" class="nav-link">About</a></li>
-                        <li class="list-item"><a href="#" class="nav-link">Sertificat</a></li>
-                    </ul>
-                </div>
+                <ul class="nav-item" id="navItem">
+                    <li class="list-item active"><a href="#" class="nav-link">Home</a></li>
+                    <li class="list-item"><a href="#" class="nav-link">About</a></li>
+                    <li class="list-item"><a href="#" class="nav-link">Sertificat</a></li>
+                </ul>
             </div>
         </nav>
-
-        <main class="page">
-
-
-        </main>
     </header>
+
+    <main>
+
+    </main>
+
+    <footer></footer>
+    <script src="assets/Js/javascrtipt.js"></script>
+
 </body>
+
 
 </html>
